# RMV-task02

./: .gitignore  CMakeLists.txt  README.md
output/: process.txt
src/: armor_detector_v2.cpp  main.cpp
